syntax = "proto3";
package model.server;

import "model/server/connectable_server.proto";

option java_package = "cc.towerdefence.api.model.server";
option java_multiple_files = true;
option java_outer_classname = "LobbyServerProto";

message LobbyServer {
  ConnectableServer connectable_server = 1;
//  uint32 number = 2; // Lobby #x - currently not assigned
}