syntax = "proto3";
package model.server;

import "model/server/connectable_server.proto";

option java_package = "cc.towerdefence.api.model.server";
option java_multiple_files = true;
option java_outer_classname = "ProxyServerProto";

message ProxyServer {
  ConnectableServer connectable_server = 1;
}