syntax = "proto3";
package service;

option java_package = "cc.towerdefence.api.service";

import "model/server/proxy_server.proto";
import "model/server/lobby_server.proto";
import "google/protobuf/empty.proto";

/**
Suggested = determine an optimal server to send the player to. E.g the emptier lobby/proxy, a filling minigame server.
 */
service ServerDiscovery {
  rpc GetSuggestedProxyServer (google.protobuf.Empty) returns (model.server.ProxyServer) {}
  rpc GetSuggestedLobbyServer (google.protobuf.Empty) returns (model.server.LobbyServer) {}
}
